Replace meteor's CordovaUpdat.startServer method with an implementation that is compatible with the wkwebview plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -59,6 +59,9 @@
     <header-file src="src/ios/CDVWebViewUIDelegate.h"/>
     <source-file src="src/ios/CDVWebViewUIDelegate.m"/>
 
+    <source-file src="src/ios/WkWebViewCordovaUpdate.h"/>
+    <source-file src="src/ios/WkWebViewCordovaUpdate.m"/>
+
   </platform>
 
 </plugin>
